[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/main/bg/anhinga-bird-silhouette.png" type="Texture" id=1]
[ext_resource path="res://assets/main/bg/owl-bird-shape.png" type="Texture" id=2]
[ext_resource path="res://assets/main/bg/beaver-mammal-animal-shape-1.png" type="Texture" id=3]
[ext_resource path="res://assets/main/bg/sheep.png" type="Texture" id=4]
[ext_resource path="res://assets/main/bg/running-dog-silhouette.png" type="Texture" id=5]
[ext_resource path="res://assets/main/bg/bird-oystercatcher.png" type="Texture" id=6]
[ext_resource path="res://assets/main/bg/velociraptor-dinosaur-shape.png" type="Texture" id=7]
[ext_resource path="res://assets/main/bg/giraffe-silhouette.png" type="Texture" id=8]
[ext_resource path="res://assets/main/bg/kangaroo-shape.png" type="Texture" id=9]
[ext_resource path="res://assets/main/bg/snail-shape.png" type="Texture" id=10]
[ext_resource path="res://assets/main/bg/ostrich-bird-shape-running.png" type="Texture" id=11]
[ext_resource path="res://assets/main/bg/gecko-reptile-shape.png" type="Texture" id=12]
[ext_resource path="res://assets/main/bg/turtle-silhouette.png" type="Texture" id=13]
[ext_resource path="res://assets/main/bg/butterfly-insect-animal-shape.png" type="Texture" id=14]
[ext_resource path="res://assets/main/bg/elephant-side-view.png" type="Texture" id=15]
[ext_resource path="res://assets/main/bg/ant-eater-shape-1.png" type="Texture" id=16]
[ext_resource path="res://assets/main/bg/rabbit-shape.png" type="Texture" id=17]
[ext_resource path="res://assets/main/bg/flamingo.png" type="Texture" id=18]
[ext_resource path="res://src/main/background.gd" type="Script" id=19]
[ext_resource path="res://assets/main/bg/grasshopper.png" type="Texture" id=20]
[ext_resource path="res://assets/main/bg/bee.png" type="Texture" id=21]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Background" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.211765, 0.47451, 0.647059, 1 )

[node name="TextureRect1" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
material = SubResource( 1 )
margin_left = 96.1666
margin_top = 7.07104
margin_right = 896.167
margin_bottom = 807.071
texture = ExtResource( 15 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 1234.43
margin_top = -100.38
margin_right = 2434.43
margin_bottom = 1099.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 15 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 658.43
margin_top = 23.62
margin_right = 1258.43
margin_bottom = 623.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 948.43
margin_top = 31.62
margin_right = 1748.43
margin_bottom = 831.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
expand = true
flip_h = true

[node name="TextureRect5" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 750.43
margin_top = -58.38
margin_right = 1550.43
margin_bottom = 741.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 16 )
expand = true
flip_h = true

[node name="TextureRect6" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 1586.43
margin_top = -156.38
margin_right = 2586.43
margin_bottom = 843.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 16 )
expand = true

[node name="TextureRect7" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 1352.43
margin_top = -80.38
margin_right = 2352.43
margin_bottom = 919.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
expand = true

[node name="TextureRect8" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 916.43
margin_top = -80.38
margin_right = 1816.43
margin_bottom = 819.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="TextureRect9" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 878.43
margin_top = -102.38
margin_right = 1778.43
margin_bottom = 797.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
expand = true
flip_h = true

[node name="TextureRect10" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 1492.43
margin_top = -404.38
margin_right = 2792.43
margin_bottom = 895.62
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect11" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
margin_left = 1225.73
margin_top = 42.1156
margin_right = 1925.73
margin_bottom = 742.116
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 14 )
expand = true

[node name="TextureRect12" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 349.709
margin_top = -252.61
margin_right = 1049.71
margin_bottom = 447.39
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 14 )
expand = true
flip_h = true

[node name="TextureRect13" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 234.34
margin_top = -224.142
margin_right = 934.34
margin_bottom = 475.858
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 18 )
expand = true
flip_h = true

[node name="TextureRect14" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.207
margin_top = -215.152
margin_right = 332.793
margin_bottom = 284.848
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 18 )
expand = true

[node name="TextureRect15" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 499.54
margin_top = -168.705
margin_right = 999.54
margin_bottom = 331.295
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 12 )
expand = true

[node name="TextureRect16" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 222.353
margin_top = -314.041
margin_right = 1122.35
margin_bottom = 585.959
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 12 )
expand = true
flip_h = true

[node name="TextureRect17" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 262.808
margin_top = -275.085
margin_right = 1162.81
margin_bottom = 624.915
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
expand = true
flip_h = true

[node name="TextureRect18" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 226.848
margin_top = -243.62
margin_right = 826.848
margin_bottom = 356.38
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
expand = true

[node name="TextureRect19" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 336.225
margin_top = -233.132
margin_right = 1036.22
margin_bottom = 466.868
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 9 )
expand = true

[node name="TextureRect20" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 229.845
margin_top = -276.583
margin_right = 789.845
margin_bottom = 283.417
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 9 )
expand = true
flip_h = true

[node name="TextureRect21" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.78
margin_top = -240.624
margin_right = 397.22
margin_bottom = 259.376
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 11 )
expand = true

[node name="TextureRect22" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 433.615
margin_top = -224.142
margin_right = 1333.61
margin_bottom = 675.858
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 11 )
expand = true
flip_h = true

[node name="TextureRect23" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 415.635
margin_top = -278.081
margin_right = 1315.63
margin_bottom = 621.919
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
expand = true
flip_h = true

[node name="TextureRect24" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 490.55
margin_top = -212.156
margin_right = 990.55
margin_bottom = 287.844
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect25" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 931.052
margin_top = -278.081
margin_right = 1931.05
margin_bottom = 721.919
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 17 )
expand = true

[node name="TextureRect26" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 295.77
margin_top = -266.095
margin_right = 895.77
margin_bottom = 333.905
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 17 )
expand = true
flip_h = true

[node name="TextureRect27" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 162.421
margin_top = -338.014
margin_right = 962.421
margin_bottom = 461.986
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 5 )
expand = true
flip_h = true

[node name="TextureRect28" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 493.547
margin_top = -315.539
margin_right = 893.547
margin_bottom = 84.4611
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect29" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 82.1842
margin_top = -325.176
margin_right = 882.184
margin_bottom = 474.824
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
expand = true
flip_h = true

[node name="TextureRect30" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1179.77
margin_top = -396.448
margin_right = 2779.77
margin_bottom = 1203.55
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 4 )
expand = true

[node name="TextureRect31" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 418.742
margin_top = -962.168
margin_right = 2018.74
margin_bottom = 637.832
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 10 )
expand = true
flip_h = true

[node name="TextureRect32" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 620.785
margin_top = -266.242
margin_right = 1420.79
margin_bottom = 533.758
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 10 )
expand = true

[node name="TextureRect33" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 533.233
margin_top = -311.141
margin_right = 1333.23
margin_bottom = 488.859
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 13 )
expand = true

[node name="TextureRect34" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.4672
margin_top = -448.081
margin_right = 558.533
margin_bottom = 151.919
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 13 )
expand = true
flip_h = true

[node name="TextureRect35" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 820.584
margin_top = -340.324
margin_right = 1570.58
margin_bottom = 409.676
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 7 )
expand = true
flip_h = true

[node name="TextureRect36" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.372
margin_top = -434.611
margin_right = 1540.37
margin_bottom = 965.389
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 7 )
expand = true

[node name="TextureRect37" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.9242
margin_top = -205.019
margin_right = 1438.92
margin_bottom = 1194.98
rect_scale = Vector2( -0.416075, 0.416075 )
texture = ExtResource( 20 )
expand = true

[node name="TextureRect38" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 821.14
margin_top = -381.217
margin_right = 2221.14
margin_bottom = 1018.78
rect_scale = Vector2( -0.591391, 0.591391 )
texture = ExtResource( 20 )
expand = true
flip_h = true

[node name="TextureRect39" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 97.1403
margin_top = -261.217
margin_right = 1497.14
margin_bottom = 1138.78
rect_scale = Vector2( -0.366883, 0.366883 )
texture = ExtResource( 21 )
expand = true
flip_h = true

[node name="TextureRect40" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.270588, 0.647059, 0.901961, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 733.14
margin_top = -367.217
margin_right = 2133.14
margin_bottom = 1032.78
rect_scale = Vector2( -0.771921, 0.681052 )
texture = ExtResource( 21 )
expand = true

[node name="ChangeTween" type="Tween" parent="."]

[connection signal="tween_completed" from="ChangeTween" to="." method="_on_ChangeTween_tween_completed"]
